--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,9 +12,15 @@
   },
   "dependencies": {
     "@repo/ui": "*",
+    "@tailwindcss/postcss": "^4.0.14",
+    "chess.js": "^1.1.0",
     "next": "^15.2.1",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-chessboard": "^4.7.2",
+    "react-dom": "^19.0.0",
+    "socket.io-client": "^4.8.1",
+    "tailwindcss": "^4.0.14"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
