--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@repo/ui": "*",
     "@tailwindcss/postcss": "^4.0.14",
+    "axios": "^1.8.3",
     "chess.js": "^1.1.0",
+    "lucide-react": "^0.481.0",
     "next": "^15.2.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
