--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -13,7 +13,7 @@
     "next-env.d.ts",
     "next.config.js",
     ".next/types/**/*.ts"
-, "app/signup"  ],
+, "app/signup", "app/chessboard"  ],
   "exclude": [
     "node_modules"
   ]
