--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -9,7 +9,9 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "socket.io": "^4.8.1",
-    "db": "*"
+    "@types/express": "^5.0.0",
+    "db": "*",
+    "express": "^4.21.2",
+    "socket.io": "^4.8.1"
   }
 }
